--- a/css/index_style800.css
+++ b/css/index_style800.css
@@ -51,7 +51,7 @@ h6{
 	color: #fffbf4;
 	font-family: "Arial", sans-serif;
 	font-weight: bold;
-	font-size: 30;
+	font-size: 20;
 }
 
 .Menu{
@@ -87,8 +87,8 @@ label {
 }
 
 #nav-icon {
-    font-size: 28px;
-    line-height: 60px;
+    font-size: 20;
+    line-height: 50px;
     color: #FFFBF4;
     background-color: #660800;
 	position: absolute;
@@ -106,7 +106,7 @@ label {
     width: 100%;
 }
 
-.Link {
+.HamLink {
 	line-height: 50px;
     list-style: none;
     text-decoration: none;
